# Minesweeper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-macos.sh  build.sh
src/: cli.c  main.cpp  test.c
src/core/: core.c  core.h  core.hpp
src/ui/: button.cpp  button.hpp  clickable.cpp  clickable.hpp  consts.hpp  game.cpp  game.hpp  intents.hpp  res_pool.cpp  res_pool.hpp  scene.cpp  scene.hpp
src/ui/components/: clickable.cpp  clickable.hpp  mine_cell.cpp  mine_cell.hpp  mine_field.cpp  mine_field.hpp  rounded.cpp  rounded.hpp  text_field.cpp  text_field.hpp
src/ui/scenes/: custom_scene.cpp  custom_scene.hpp  field_scene.cpp  field_scene.hpp  menu_scene.cpp  menu_scene.hpp
src/ui/utils/: clickable.cpp  clickable.hpp  consts.hpp  difficulty.hpp  mine_cell.cpp  mine_cell.hpp  res_pool.cpp  res_pool.hpp  rounded.cpp  rounded.hpp
test/: test_main.cpp  test_scene.cpp  test_scene.hpp
